<resources>
    <string name="app_name">The FootBall App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team">TEAM</string>
    <string name="premier">Premier</string>
    <string name="laliga">LaLiga</string>
    <string name="bundes">Bundesliga</string>
    <string name="seriea">SerieA</string>
    <string name="ligueone">Ligue1</string>
    <string name="match">MATCH</string>
    <string name="team_detail">Team</string>
    <string name="premier_banner">Premier banner</string>
    <string name="navigation_tabs">Navigation tabs</string>
    <string name="container">Container</string>
    <string name="bundes_banner">bundes banner</string>
    <string name="teamimg">TeamImg</string>
    <string name="stadium">Stadium</string>
    <string name="founded">Founded</string>
</resources>