<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottom-sheet.BottomSheetBehavior"
    tools:context=".ui.team.detail.TeamDetailFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/teamimg" />

    <!--<ImageView
        android:id="@+id/iv_country"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintBottom_toTopOf="@+id/iv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/teamimg"
        android:layout_margin="15dp"/>-->

    <TextView
        android:id="@+id/iv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_stadium_holder"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/iv_stadium_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_founded_holder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stadium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/iv_stadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/iv_founded_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_lastMatches">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/founded"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/iv_founded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/iv_lastMatches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/iv_founded_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_Team1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="Tm1z" />

            <TextView
                android:id="@+id/iv_Team1Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:0"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_Team1WDL"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_Team2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/iv_Team2Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:0"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_Team2WDL"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_Team3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/iv_Team3Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:0"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_Team3WDL"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_Team4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/iv_Team4Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:0"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_Team4WDL"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_Team5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/iv_Team5Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:0"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_Team5WDL"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>